welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value T
    if (T(i)==lookingFor) return i
        ^